/***********************************************************************
X3 ChangeLog

2007-02-06  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: fix compiling problem when non-ldap. Compile fixups
	and sanity checks.

        * configure.in: Better ldap library handling **oops ** helps to
	actually have -lldap in LIBS...

	* configure: regenerated from above ** **

	* x3.conf.example: tweaked ldap settings

	* src/nickserv.h: remove ldap config settings if not compiled in

	* src/nickserv.c: automatiaclly add users who can auth to ldap and get
	logins working.

2007-02-06 Neil Spierling  <sirvulcan@gmail.com>

	* src/x3ldap.c: Added GPL header, also change the printf's to
	log_module's as per one of the todo comments.

	* src/x3ldap.h: Added GPL header.

2007-02-05  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: fix non-compile without ldap problem 

2007-02-05  Alex Schumann  <rubin@afternet.org>

        * src/x3ldap.c: Beginnings of ldap authentication support

	* src/x3ldap.h: Beginnings of ldap authentication support

	* src/nickserv.h: Move config struct to .h so ldap.c can see it too

	* src/nickserv.c: Beginnings of ldap authentication support

	* x3.conf.example: ldap config settings

	* src/md5.c: remove old debugging printf() code

	* src/configure.in: add --enable-ldap support to configure

	* configure: rebuilt from above

	* src/Makefile.am: add --enable-ldap support to configure

	* src/Makefile.in: rebuilt from above


2007-02-04 Neil Spierling  <sirvulcan@gmail.com>

	* src/hash.c: Bug fix for bug #1651561.

2007-02-01 Neil Spierling  <sirvulcan@gmail.com>

	* src/nickserv.c: Fixed bug #1649326.

2007-01-28  Alex Schumann  <rubin@afternet.org>
        
	* src/mod-memoserv.c: if you bind memoserv commands to chanserv's
	nick, and someone sends a memo, send them the memo from memoserv, if
	there is a memoserv (not chanserv).  Also, make the mini-help prompts
	more generic, for when they come from another bot besides memoserv.
