@@ -1,6 +1,18 @@
 /***********************************************************************
 X3 ChangeLog
 
+2007-02-07  Alex Schumann  <rubin@afternet.org>
+
+	* src/x3ldap.c: ldap_add functionality
+
+	* src/x3ldap.h: ldap_add functionality
+
+	* src/nickserv.h: ldap_add functionality
+
+	* src/nickserv.c: ldap_add functionality
+
+	* x3.conf.example: ldap_add functionality
+
 2007-02-06  Alex Schumann  <rubin@afternet.org>
 
 	* src/x3ldap.c: fix compiling problem when non-ldap. Compile fixups
